fix(calendar) fix double scroll calendar

--- a/src/app/activity-calendar/calendar/calendar.component.scss
+++ b/src/app/activity-calendar/calendar/calendar.component.scss
@@ -3,7 +3,10 @@
   --mat-cell-resizable-handle-size: 5px;
   --mat-cell-resizable-handle-color-hover: var(--ion-color-secondary);
 }
-
+.no-scroll {
+  height: initial;
+  overflow: initial;
+}
 .mat-accordion {
   --expansion-panel-padding: 0;
   .mat-expansion-panel-header {
